BusOne/src/objects/Mobile_Device_vod__c.object
<CustomObject>
    <description>Mobile devices associated with the User</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the mobile device is active</description>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AppID_vod__c</fullName>
        <description>System field used by mobile products to store Apple App ID.</description>
        <label>AppID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Deleted_Datetime_vod__c</fullName>
        <description>Indicates the date/time when the app was deleted on the device</description>
        <label>App Deleted Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Device_vod__c</fullName>
        <description>Mobile device token/Id</description>
        <label>Device</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_App_Version_vod__c</fullName>
        <description>Last app version running on the device</description>
        <label>Last App Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Connected_Datetime_vod__c</fullName>
        <description>Date/Time of when the app was last launched or placed into the foreground</description>
        <label>Last Connected Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Device_Model_vod__c</fullName>
        <description>Last device model used</description>
        <label>Last Device Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_OS_Version_vod__c</fullName>
        <description>Last OS version running on the device</description>
        <label>Last OS Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Out_Datetime_vod__c</fullName>
        <description>Indicates the date/time of when the user logged out of the mobile app</description>
        <label>Log Out Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Push_Company_Alerts_Disabled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that push notifications was disabled for the Company Alerts notification type</description>
        <label>Push Company Alerts Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_Notifications_Enabled_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that push notifications are enabled for the app on the device</description>
        <label>Push Notifications Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User the mobile device is associated with</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mobile_Devices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mobile Device</label>
    <nameField>
        <label>Mobile Device Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Devices</pluralLabel>
    <recordTypes>
        <fullName>iOS_vod</fullName>
        <active>true</active>
        <description>iOS Mobile Device</description>
        <label>iOS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>